--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,6 +31,30 @@
             "logging": {
                 "moduleLoad": false
             }
+        },
+        {
+            "type": "swift-lldb",
+            "request": "launch",
+            "sourceLanguages": [
+                "swift"
+            ],
+            "args": ["--input", "input.txt"],
+            "cwd": "${workspaceFolder:adventofcode}\\2023\\swift\\01",
+            "name": "Debug day01 (2023\\swift\\01)",
+            "program": "${workspaceFolder:adventofcode}\\2023\\swift\\01\\.build\\debug\\day01.exe",
+            "preLaunchTask": "swift: Build Debug day01 (2023\\swift\\01)"
+        },
+        {
+            "type": "swift-lldb",
+            "request": "launch",
+            "sourceLanguages": [
+                "swift"
+            ],
+            "args": ["--input", "input.txt"],
+            "cwd": "${workspaceFolder:adventofcode}\\2023\\swift\\01",
+            "name": "Release day01 (2023\\swift\\01)",
+            "program": "${workspaceFolder:adventofcode}\\2023\\swift\\01\\.build\\release\\day01.exe",
+            "preLaunchTask": "swift: Build Release day01 (2023\\swift\\01)"
         }
     ]
 }
