--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -91,6 +91,36 @@
             "name": "Release day01b (2023\\swift\\01)",
             "program": "${workspaceFolder:adventofcode}\\2023\\swift\\01\\.build\\release\\day01b.exe",
             "preLaunchTask": "swift: Build Release day01b (2023\\swift\\01)"
+        },
+        {
+            "type": "swift-lldb",
+            "request": "launch",
+            "sourceLanguages": [
+                "swift"
+            ],
+            "args": [
+                "--input",
+                "input.txt"
+            ],
+            "cwd": "${workspaceFolder:adventofcode}\\2023\\swift\\02",
+            "name": "Debug day02 (2023\\swift\\02)",
+            "program": "${workspaceFolder:adventofcode}\\2023\\swift\\02\\.build\\debug\\day02.exe",
+            "preLaunchTask": "swift: Build Debug day02 (2023\\swift\\02)"
+        },
+        {
+            "type": "swift-lldb",
+            "request": "launch",
+            "sourceLanguages": [
+                "swift"
+            ],
+            "args": [
+                "--input",
+                "input.txt"
+            ],
+            "cwd": "${workspaceFolder:adventofcode}\\2023\\swift\\02",
+            "name": "Release day02 (2023\\swift\\02)",
+            "program": "${workspaceFolder:adventofcode}\\2023\\swift\\02\\.build\\release\\day02.exe",
+            "preLaunchTask": "swift: Build Release day02 (2023\\swift\\02)"
         }
     ]
 }
