--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -601,6 +601,36 @@
             "name": "Release day10 (2023\\swift\\10)",
             "program": "${workspaceFolder:adventofcode}\\2023\\swift\\10\\.build\\release\\day10.exe",
             "preLaunchTask": "swift: Build Release day10 (2023\\swift\\10)"
+        },
+        {
+            "type": "swift-lldb",
+            "request": "launch",
+            "sourceLanguages": [
+                "swift"
+            ],
+            "args": [
+                "--input",
+                "input4.txt"
+            ],
+            "cwd": "${workspaceFolder:adventofcode}\\2023\\swift\\10",
+            "name": "Debug day10b (2023\\swift\\10)",
+            "program": "${workspaceFolder:adventofcode}\\2023\\swift\\10\\.build\\debug\\day10b.exe",
+            "preLaunchTask": "swift: Build Debug day10b (2023\\swift\\10)"
+        },
+        {
+            "type": "swift-lldb",
+            "request": "launch",
+            "sourceLanguages": [
+                "swift"
+            ],
+            "args": [
+                "--input",
+                "input.txt"
+            ],
+            "cwd": "${workspaceFolder:adventofcode}\\2023\\swift\\10",
+            "name": "Release day10b (2023\\swift\\10)",
+            "program": "${workspaceFolder:adventofcode}\\2023\\swift\\10\\.build\\release\\day10b.exe",
+            "preLaunchTask": "swift: Build Release day10b (2023\\swift\\10)"
         }
     ]
 }
