Solved 2023 day 10 in Swift

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -610,7 +610,7 @@
             ],
             "args": [
                 "--input",
-                "input4.txt"
+                "input.txt"
             ],
             "cwd": "${workspaceFolder:adventofcode}\\2023\\swift\\10",
             "name": "Debug day10b (2023\\swift\\10)",
